tests/snapshots/snapshots__budget_go_multierror_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (1091 words)

CHANGELOG.md
     1→## Unreleased
     2→
     3→### Improvements
     4→
     5→### Changes
     6→
     7→### Fixed
     8→
     9→### Security
README.md
     1→# go-multierror
     2→
     3→[![CircleCI](https://img.shields.io/circleci/build/github/hashicorp/go-multierror/master)](https://circleci.com/gh/hashicorp/go-multierror)
     4→[![Go Reference](https://pkg.go.dev/badge/github.com/hashicorp/go-multierror.svg)](https://pkg.go.dev/github.com/hashicorp/go-multierror)
     5→![GitHub go.mod Go version](https://img.shields.io/github/go-mod/go-version/hashicorp/go-multierror)
     6→
    12→## Migrating to `errors.Join`
    13→
    14→**Basic error aggregation:**
    15→```go
    16→// Before (go-multierror)
    17→var result error
   104→## Installation and Docs
   105→
   106→Install using `go get github.com/hashicorp/go-multierror`.
   107→
   108→Full documentation is available at
   109→https://pkg.go.dev/github.com/hashicorp/go-multierror
   111→### Requires go version 1.13 or newer
   112→
   113→`go-multierror` requires go version 1.13 or newer. Go 1.13 introduced
   114→[error wrapping](https://golang.org/doc/go1.13#error_wrapping), which
   115→this library takes advantage of.
   116→
   129→## Usage
   130→
   131→go-multierror is easy to use and purposely built to be unobtrusive in
   132→existing Go applications/libraries that may not be aware of it.
   133→
   134→**Building a list of errors**
append.go
     6→// Append is a helper function that will append more errors
     7→// onto an Error in order to create a larger multi-error.
     8→//
     9→// If err is not a multierror.Error, then it will be turned into
    10→// one. If any of the errs are multierr.Error, they will be flattened
    11→// one level into err.
    12→// Any nil errors within errs will be ignored. If err is nil, a new
    13→// *Error will be returned.
    14→func Append(err error, errs ...error) *Error {
    15→	switch err := err.(type) {
flatten.go
     6→// Flatten flattens the given error, merging any *Errors together into
     7→// a single *Error.
     8→func Flatten(err error) error {
     9→	// If it isn't an *Error, just return the error as-is
    20→func flatten(err error, flatErr *Error) {
    21→	switch err := err.(type) {
    22→	case *Error:
    23→		for _, e := range err.Errors {
    24→			flatten(e, flatErr)
    25→		}
    26→	default:
    27→		flatErr.Errors = append(flatErr.Errors, err)
    28→	}
    29→}
format.go
    11→// ErrorFormatFunc is a function callback that is called by Error to
    12→// turn the list of errors into a string.
    13→type ErrorFormatFunc func([]error) string
    15→// ListFormatFunc is a basic formatter that outputs the number of errors
    16→// that occurred along with a bullet point list of the errors.
    17→func ListFormatFunc(es []error) string {
    18→	if len(es) == 1 {
group.go
     8→// Group is a collection of goroutines which return errors that need to be
     9→// coalesced.
    10→type Group struct {
    11→	mutex sync.Mutex
    12→	err   *Error
    13→	wg    sync.WaitGroup
    14→}
    16→// Go calls the given function in a new goroutine.
    17→//
    18→// If the function returns an error it is added to the group multierror which
    19→// is returned by Wait.
    20→func (g *Group) Go(f func() error) {
    21→	g.wg.Add(1)
    34→// Wait blocks until all function calls from the Go method have returned, then
    35→// returns the multierror.
    36→func (g *Group) Wait() *Error {
    37→	g.wg.Wait()
multierror.go
    11→// Error is an error type to track multiple errors. This is used to
    12→// accumulate errors in cases and return them as a single "error".
    13→type Error struct {
    14→	Errors      []error
    15→	ErrorFormat ErrorFormatFunc
    16→}
    18→func (e *Error) Error() string {
    19→	fn := e.ErrorFormat
    20→	if fn == nil {
    21→		fn = ListFormatFunc
    22→	}
    23→
    24→	return fn(e.Errors)
    25→}
    27→// ErrorOrNil returns an error interface if this Error represents
    28→// a list of errors, or returns nil if the list of errors is empty. This
    29→// function is useful at the end of accumulation to make sure that the value
    30→// returned represents the existence of errors.
    31→func (e *Error) ErrorOrNil() error {
    32→	if e == nil {
    42→func (e *Error) GoString() string {
    43→	return fmt.Sprintf("*%#v", *e)
    44→}
    46→// WrappedErrors returns the list of errors that this Error is wrapping. It is
    47→// an implementation of the errwrap.Wrapper interface so that multierror.Error
    48→// can be used with that library.
    49→//
    50→// This method is not safe to be called concurrently. Unlike accessing the
    51→// Errors field directly, this function also checks if the multierror is nil to
    52→// prevent a null-pointer panic. It satisfies the errwrap.Wrapper interface.
    53→func (e *Error) WrappedErrors() []error {
    54→	if e == nil {
    60→// Unwrap returns an error from Error (or nil if there are no errors).
    61→// This error returned will further support Unwrap to get the next error,
    62→// etc. The order will match the order of Errors in the multierror.Error
    63→// at the time of calling.
    64→//
    65→// The resulting error supports errors.As/Is/Unwrap so you can continue
    66→// to use the stdlib errors package to introspect further.
    67→//
    68→// This will perform a shallow copy of the errors slice. Any errors appended
    69→// to this error after calling Unwrap will not be available until a new
    70→// Unwrap is called on the multierror.Error.
    71→func (e *Error) Unwrap() error {
    72→	// If we have no errors then we do nothing
    88→// chain implements the interfaces necessary for errors.Is/As/Unwrap to
    89→// work in a deterministic way with multierror. A chain tracks a list of
    90→// errors while accounting for the current represented error. This lets
    91→// Is/As be meaningful.
    92→//
    93→// Unwrap returns the next error. In the cleanest form, Unwrap would return
    94→// the wrapped error here but we can't do that if we want to properly
    95→// get access to all the errors. Instead, users are recommended to use
    96→// Is/As to get the correct error type out.
    97→//
    98→// Precondition: []error is non-empty (len > 0)
    99→type chain []error
   101→// Error implements the error interface
   102→func (e chain) Error() string {
   103→	return e[0].Error()
   106→// Unwrap implements errors.Unwrap by returning the next error in the
   107→// chain or nil if there are no more errors.
   108→func (e chain) Unwrap() error {
   109→	if len(e) == 1 {
   116→// As implements errors.As by attempting to map to the current value.
   117→func (e chain) As(target interface{}) bool {
   118→	return errors.As(e[0], target)
   121→// Is implements errors.Is by comparing the current value directly.
   122→func (e chain) Is(target error) bool {
   123→	return errors.Is(e[0], target)
prefix.go
    10→// Prefix is a helper function that will prefix some text
    11→// to the given error. If the error is a multierror.Error, then
    12→// it will be prefixed to each wrapped error.
    13→//
    14→// This is useful to use when appending multiple multierrors
    15→// together in order to give better scoping.
    16→func Prefix(err error, prefix string) error {
    17→	if err == nil {
sort.go
     6→// Len implements sort.Interface function for length
     7→func (err *Error) Len() int {
     8→	if err == nil {
    15→// Swap implements sort.Interface function for swapping elements
    16→func (err Error) Swap(i, j int) {
    17→	err.Errors[i], err.Errors[j] = err.Errors[j], err.Errors[i]
    20→// Less implements sort.Interface function for determining order
    21→func (err Error) Less(i, j int) bool {
    22→	return err.Errors[i].Error() < err.Errors[j].Error()
