tests/snapshots/snapshots__budget_go_multierror_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 5 → level 0 (9 words)

CHANGELOG.md
README.md
append.go
flatten.go
format.go
group.go
multierror.go
prefix.go
sort.go
