tests/snapshots/snapshots__budget_go_multierror_level1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 120 → level 1 (112 words)

CHANGELOG.md
     1→## Unreleased
     3→### Improvements
     5→### Changes
     7→### Fixed
     9→### Security
README.md
     1→# go-multierror
    12→## Migrating to `errors.Join`
   104→## Installation and Docs
   111→### Requires go version 1.13 or newer
   129→## Usage
append.go
    14→func Append
flatten.go
     8→func Flatten
    20→func flatten
format.go
    13→type ErrorFormatFunc
    17→func ListFormatFunc
group.go
    10→type Group
    20→func (g *Group) Go
    36→func (g *Group) Wait
multierror.go
    13→type Error
    18→func (e *Error) Error
    31→func (e *Error) ErrorOrNil
    42→func (e *Error) GoString
    53→func (e *Error) WrappedErrors
    71→func (e *Error) Unwrap
    99→type chain
   102→func (e chain) Error
   108→func (e chain) Unwrap
   117→func (e chain) As
   122→func (e chain) Is
prefix.go
    16→func Prefix
sort.go
     7→func (err *Error) Len
    16→func (err Error) Swap
    21→func (err Error) Less
