tests/snapshots/snapshots__budget_go_multierror_level3.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 900 → level 5 (719 words)

CHANGELOG.md
     1→## Unreleased
     2→
     3→### Improvements
     4→
     5→### Changes
     6→
     7→### Fixed
     8→
     9→### Security
README.md
     1→# go-multierror
     2→
     3→[![CircleCI](https://img.shields.io/circleci/build/github/hashicorp/go-multierror/master)](https://circleci.com/gh/hashicorp/go-multierror)
     4→[![Go Reference](https://pkg.go.dev/badge/github.com/hashicorp/go-multierror.svg)](https://pkg.go.dev/github.com/hashicorp/go-multierror)
     5→![GitHub go.mod Go version](https://img.shields.io/github/go-mod/go-version/hashicorp/go-multierror)
    12→## Migrating to `errors.Join`
    13→
    14→**Basic error aggregation:**
    15→```go
    16→// Before (go-multierror)
    17→var result error
    18→result = multierror.Append(result, err1)
    19→result = multierror.Append(result, err2)
    20→return result
   104→## Installation and Docs
   105→
   106→Install using `go get github.com/hashicorp/go-multierror`.
   111→### Requires go version 1.13 or newer
   112→
   113→`go-multierror` requires go version 1.13 or newer. Go 1.13 introduced
   114→[error wrapping](https://golang.org/doc/go1.13#error_wrapping), which
   115→this library takes advantage of.
   129→## Usage
   130→
   131→go-multierror is easy to use and purposely built to be unobtrusive in
   132→existing Go applications/libraries that may not be aware of it.
append.go
     6→// Append is a helper function that will append more errors
    14→func Append(err error, errs ...error) *Error {
flatten.go
     6→// Flatten flattens the given error, merging any *Errors together into
     7→// a single *Error.
     8→func Flatten(err error) error {
    20→func flatten(err error, flatErr *Error) {
format.go
    11→// ErrorFormatFunc is a function callback that is called by Error to
    12→// turn the list of errors into a string.
    13→type ErrorFormatFunc func([]error) string
    15→// ListFormatFunc is a basic formatter that outputs the number of errors
    16→// that occurred along with a bullet point list of the errors.
    17→func ListFormatFunc(es []error) string {
group.go
     8→// Group is a collection of goroutines which return errors that need to be
     9→// coalesced.
    10→type Group struct {
    16→// Go calls the given function in a new goroutine.
    17→//
    18→// If the function returns an error it is added to the group multierror which
    19→// is returned by Wait.
    20→func (g *Group) Go(f func() error) {
    34→// Wait blocks until all function calls from the Go method have returned, then
    35→// returns the multierror.
    36→func (g *Group) Wait() *Error {
multierror.go
    11→// Error is an error type to track multiple errors. This is used to
    12→// accumulate errors in cases and return them as a single "error".
    13→type Error struct {
    18→func (e *Error) Error() string {
    27→// ErrorOrNil returns an error interface if this Error represents
    28→// a list of errors, or returns nil if the list of errors is empty. This
    29→// function is useful at the end of accumulation to make sure that the value
    30→// returned represents the existence of errors.
    31→func (e *Error) ErrorOrNil() error {
    42→func (e *Error) GoString() string {
    46→// WrappedErrors returns the list of errors that this Error is wrapping. It is
    47→// an implementation of the errwrap.Wrapper interface so that multierror.Error
    48→// can be used with that library.
    49→//
    50→// This method is not safe to be called concurrently. Unlike accessing the
    51→// Errors field directly, this function also checks if the multierror is nil to
    52→// prevent a null-pointer panic. It satisfies the errwrap.Wrapper interface.
    53→func (e *Error) WrappedErrors() []error {
    60→// Unwrap returns an error from Error (or nil if there are no errors).
    61→// This error returned will further support Unwrap to get the next error,
    62→// etc. The order will match the order of Errors in the multierror.Error
    63→// at the time of calling.
    64→//
    65→// The resulting error supports errors.As/Is/Unwrap so you can continue
    66→// to use the stdlib errors package to introspect further.
    67→//
    68→// This will perform a shallow copy of the errors slice. Any errors appended
    69→// to this error after calling Unwrap will not be available until a new
    70→// Unwrap is called on the multierror.Error.
    71→func (e *Error) Unwrap() error {
    99→type chain []error
   101→// Error implements the error interface
   102→func (e chain) Error() string {
   106→// Unwrap implements errors.Unwrap by returning the next error in the
   107→// chain or nil if there are no more errors.
   108→func (e chain) Unwrap() error {
   116→// As implements errors.As by attempting to map to the current value.
   117→func (e chain) As(target interface{}) bool {
   121→// Is implements errors.Is by comparing the current value directly.
   122→func (e chain) Is(target error) bool {
prefix.go
    10→// Prefix is a helper function that will prefix some text
    16→func Prefix(err error, prefix string) error {
sort.go
     6→// Len implements sort.Interface function for length
     7→func (err *Error) Len() int {
    15→// Swap implements sort.Interface function for swapping elements
    16→func (err Error) Swap(i, j int) {
    20→// Less implements sort.Interface function for determining order
    21→func (err Error) Less(i, j int) bool {
